# himalaya-mcp-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/himalaya_mcp/: cli.py  server.py  types.py  validation.py
src/himalaya_mcp/tools/: account.py  attachment.py  envelope.py  flag.py  folder.py  message.py  template.py
tests/: conftest.py  test_cli.py  test_error_handling.py  test_server.py  test_tools.py  test_validation.py
